--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,9 @@ header {
   color: white;
   font-weight: bold;
 }
+
+.recipes {
+  justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+}
