--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,16 @@
 header {
   text-align: center;
   font-weight: bolder;
-  font-size: 50px;
-  padding: 10px;
-  background-color: pink;
+  font-size: 70px;
+  padding: 70px;
+  color: white;
+  background-image: url("spice1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .search-form {
-  background-color: pink;
   min-height: 10vh;
   display: flex;
   justify-content: center;
